fix navbar gap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -188,3 +188,13 @@ a {
     transform: translateY(0);
   }
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  margin-top: 0;
+  padding-top: 0;
+}
